<resources>
    <string name="app_name">FAST App Search Tool</string>
    <string name="icon">Icon</string>
    <string name="launch_single">Auto launch</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="also_use_the_package_name_for_searching">Search package name as well as app name</string>
    <string name="search_in_package">Search packages</string>
    <string name="auto_launch_if_only_one_app_left">Auto-launch if only one search result</string>
    <string name="open_in_for_all">Always show "Open in %s"</string>
    <string name="even_if_installed_another_way">Even if installed from somewhere else</string>
    <string name="application_details">Application Details</string>
    <string name="open_in">Open in</string>
    <string name="open_as_notification">Open as Notification</string>
    <string name="query_hint">Enter query here</string>
    <string name="text_only">Only show app names</string>
    <string name="app_gone">This App is gone :-(</string>
    <string name="show_no_icons_pure_text">Only show app names, not the icons</string>
    <string name="max_text_lines">Lines of text</string>
    <string name="how_much_text_you_want">Max number of lines used to display app name</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="icon_size">Icon size</string>
    <string name="how_big_icons">How big should the app icons be?</string>
    <string name="theme">Theme</string>
    <string name="choose_your_look">Choose the look of FAST App Search</string>
    <string name="sort">Sort</string>
    <string name="sort_decr">How should the apps be sorted?</string>
    <string name="convert_umlauts">Convert umlauts</string>
    <string name="convert_umlauts_descr">Change ae to ä, oe to ö, ss to ß and ue to ü</string>
    <string name="allow_gap_search">Search within words</string>
    <string name="allow_gap_search_descr">Matches all letters, not just whole words</string>
    <string name="loadingDialogTitle">Caching to serve FAST</string>
    <string name="ignore_space">Ignore space</string>
    <string name="ignore_space_descr">Remove last space from query</string>
    <string name="show_keyboard">Show keyboard</string>
    <string name="show_keyboard_descr">Open the keyboard on startup</string>
    <string name="appActionDialog_title">FAST Launch </string>
    <string name="remove_cache">Clear cache</string>
    <string name="remove_cache_descr">Force FAST to reset app list and history</string>
    <string name="icon_resolution_title">Icon Resolution</string>
    <string name="icon_resolution_summary">More speed or more pixels?</string>

    <string-array name="sizes">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="sizesValues">
        <item>tiny</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>

    <string name="sizesDefaultValue">medium</string>

    <string-array name="themes">
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string-array name="themesValues">
        <item>dark</item>
        <item>light</item>
    </string-array>

    <string name="themeDefaultValue">dark</string>

    <string-array name="sort_orders">
        <item>Unsorted</item>
        <item>Alphabetical</item>
        <item>By usage</item>
        <item>By install</item>
    </string-array>

    <string-array name="sort_ordersValues">
        <item>unsorted</item>
        <item>alpha</item>
        <item>most_used</item>
        <item>last_installed</item>
    </string-array>

    <string name="sort_ordersDefaultValue">most_used</string>

    <string-array name="rows">
        <item>No text</item>
        <item>1 row</item>
        <item>2 rows</item>
        <item>3 rows</item>
    </string-array>

    <string-array name="rowsValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="rowsDefaultValue">1</string>

    <string-array name="resolutions">
        <item>48</item>
        <item>96</item>
        <item>128</item>
        <item>512</item>
    </string-array>

    <string-array name="resolutionsValues">
        <item>48</item>
        <item>96</item>
        <item>128</item>
        <item>512</item>
    </string-array>

    <string name="resolutionsDefaultValue">96</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_help_clear_memory">To help clear memory</string>
</resources>
